fix favicon url

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./assets/images/favicon-32x32.png"
     />
 
     <link rel="stylesheet" href="tailwind-out.css">
@@ -96,7 +96,11 @@
             <p>Colton Smith</p>
             <p class="text-custom-pink/80">Verified Buyer</p>
           </div>
-          <blockquote class="col-span-2 before:content-['“'] after:content-['”']">
+          <blockquote class="
+            col-span-2
+            before:content-['“'] before:text-5xl/[0] before:inline-block before:translate-y-[1.1rem]
+            after:content-['”'] after:text-5xl/[0] after:inline-block after:translate-y-[1.1rem]
+          ">
             We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
             Excellent!
@@ -110,10 +114,14 @@
         ">
           <img class="w-10 aspect-square rounded-full" src="./assets/images/image-irene.jpg" alt="Irene Roberts">
           <div class="text-base/5">
-              <p>Irene Roberts</p>
-              <p class="text-custom-pink/80">Verified Buyer</p>
-            </div>
-            <blockquote class="col-span-2 before:content-['“'] after:content-['”']">
+            <p>Irene Roberts</p>
+            <p class="text-custom-pink/80">Verified Buyer</p>
+          </div>
+          <blockquote class="
+            col-span-2
+            before:content-['“'] before:text-5xl/[0] before:inline-block before:translate-y-[1.1rem]
+            after:content-['”'] after:text-5xl/[0] after:inline-block after:translate-y-[1.1rem]
+          ">
             Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery.
           </blockquote>
@@ -126,10 +134,14 @@
         ">
           <img class="w-10 aspect-square rounded-full" src="./assets/images/image-anne.jpg" alt="Anne Wallace">
           <div class="text-base/5">
-              <p>Anne Wallace</p>
-              <p class="text-custom-pink/80">Verified Buyer</p>
-            </div>
-            <blockquote class="col-span-2 before:content-['“'] after:content-['”']">
+            <p>Anne Wallace</p>
+            <p class="text-custom-pink/80">Verified Buyer</p>
+          </div>
+          <blockquote class="
+            col-span-2
+            before:content-['“'] before:text-5xl/[0] before:inline-block before:translate-y-[1.1rem]
+            after:content-['”'] after:text-5xl/[0] after:inline-block after:translate-y-[1.1rem]
+          ">
             Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!
           </blockquote>
