refactor for redirect

--- a/public/testimonials/index.html
+++ b/public/testimonials/index.html
@@ -8,10 +8,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="/testimonials/assets/images/favicon-32x32.png"
     />
 
-    <link rel="stylesheet" href="tailwind-out.css">
+    <link rel="stylesheet" href="/testimonials/tailwind-out.css">
 
     <title>Frontend Mentor | Social proof section</title>
   </head>
@@ -21,9 +21,9 @@
     font-custom font-bold
     backdrop2-saturate-200
     bg-no-repeat bg-[position:_top_right,_bottom_left]
-    bg-[url('./assets/images/bg-pattern-top-mobile.svg'),_url('./assets/images/bg-pattern-bottom-mobile.svg')]
+    bg-[url('/testimonials/assets/images/bg-pattern-top-mobile.svg'),_url('/testimonials/assets/images/bg-pattern-bottom-mobile.svg')]
     flex flex-col items-center justify-between
-    [@media(min-width:376px)]:bg-[url('./assets/images/bg-pattern-top-desktop.svg'),_url('./assets/images/bg-pattern-bottom-desktop.svg')]
+    [@media(min-width:376px)]:bg-[url('/testimonials/assets/images/bg-pattern-top-desktop.svg'),_url('/testimonials/assets/images/bg-pattern-bottom-desktop.svg')]
     [@media(min-width:376px)]:bg-[position:_top_right_50vw,_bottom_left_50vw]
     ">
 
@@ -56,7 +56,7 @@
           lg:w-[400px]
           lg:flex-row
         ">
-          <span class="shrink-0 bg-[url('./assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
+          <span class="shrink-0 bg-[url('/testimonials/assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
           <figcaption class="lg:pt-[0.4rem] lg:text-xl">Rated 5 Stars in Reviews</figcaption>
         </figure>
 
@@ -66,7 +66,7 @@
           lg:flex-row
           lg:self-center
         ">
-          <span class="shrink-0 bg-[url('./assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
+          <span class="shrink-0 bg-[url('/testimonials/assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
           <figcaption class="lg:pt-[0.4rem] lg:text-xl/5">Rated 5 Stars in Report Guru</figcaption>
         </figure>
 
@@ -76,7 +76,7 @@
           lg:flex-row
           lg:self-end
         ">
-          <span class="shrink-0 bg-[url('./assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
+          <span class="shrink-0 bg-[url('/testimonials/assets/images/icon-star.svg')] bg-[length:1rem_1rem] bg-repeat-space h-4 w-[5.9rem] block"></span>
           <figcaption class="lg:pt-[0.4rem] lg:text-xl">Rated 5 Stars in BestTech</figcaption>
         </figure>
       </section>
@@ -91,7 +91,7 @@
           grid grid-cols-[2rem_1fr] gap-4 items-center
           lg:self-start
         ">
-          <img class="w-10 aspect-square rounded-full" src="./assets/images/image-colton.jpg" alt="Colton Smith">
+          <img class="w-10 aspect-square rounded-full" src="/testimonials/assets/images/image-colton.jpg" alt="Colton Smith">
           <div class="text-base/5">
             <p>Colton Smith</p>
             <p class="text-custom-pink/80">Verified Buyer</p>
@@ -112,7 +112,7 @@
           grid grid-cols-[2rem_1fr] gap-4 items-center
           lg:m-8
         ">
-          <img class="w-10 aspect-square rounded-full" src="./assets/images/image-irene.jpg" alt="Irene Roberts">
+          <img class="w-10 aspect-square rounded-full" src="/testimonials/assets/images/image-irene.jpg" alt="Irene Roberts">
           <div class="text-base/5">
             <p>Irene Roberts</p>
             <p class="text-custom-pink/80">Verified Buyer</p>
@@ -132,7 +132,7 @@
           grid grid-cols-[2rem_1fr] gap-4 items-center
           lg:self-end
         ">
-          <img class="w-10 aspect-square rounded-full" src="./assets/images/image-anne.jpg" alt="Anne Wallace">
+          <img class="w-10 aspect-square rounded-full" src="/testimonials/assets/images/image-anne.jpg" alt="Anne Wallace">
           <div class="text-base/5">
             <p>Anne Wallace</p>
             <p class="text-custom-pink/80">Verified Buyer</p>
