--- a/public/testimonials/index.html
+++ b/public/testimonials/index.html
@@ -153,7 +153,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://github.com/dokdospanish/">Dokdo Spanish</a>.
+      >. Coded by <a href="https://github.com/rubenalmaguer/">Ruben</a>.
     </div>
   </body>
 </html>
